# storefront

./:  sentry.server.config.js  .eslintignore  .eslintrc.json  .gitignore  .graphqlrc.ts  .sentryclirc  Dockerfile  README.md  codegen.yml  next.config.cjs  package-lock.json  package.json  pyproject.toml  schema.graphql  start-storefront.sh  tsconfig.json
.github/workflows/: main.yml  update_types.yml
__tests__/: STF_05.spec.ts
auth-sdk/: fylinde-auth-sdk-1.0.1.tgz
public/: actions.ts  layout.tsx
src/: App.tsx  firebaseConfig.ts  index.tsx
src/api/: draft.ts
src/components/: AuthProvider.tsx  Box.tsx  Card.tsx  ChannelSelect.tsx  CheckBox.tsx  Chip.tsx  Footer.tsx  LazyImage.tsx  LoginForm.tsx  Logo.tsx  Menu.tsx  OrderListItem.tsx  Pagination.tsx  PaymentStatus.tsx  ProductElement.tsx  ProductList.tsx  Typography.tsx  VariantSelector.tsx  loading.tsx
src/config/: config.ts
src/data/: countryList.ts  navbarNavigations.ts
src/hooks/: useSelectedPathname.ts
src/interfaces/: index.ts
src/lib/: checkout.ts  graphql.ts
src/pages/: AdminPage.tsx  CartPage.tsx  CategoryPage.styles.ts  CategoryPage.tsx  CollectionPage.styles.ts  CollectionPage.tsx  HomePage.styles.ts  HomePage.tsx  LoginPage.styles.ts  LoginPage.tsx  OrderPage.styles.ts  OrderPage.tsx  ProductPage.tsx  SearchPage.styles.ts  SearchPage.tsx
src/services/: ARService.ts  RecommendationService.ts  addressAPI.ts  addressService.ts  authService.ts  cartService.ts  categoryService.ts  collectionService.ts  exchangeRateService.ts  graphqlService.ts  orderService.ts  pageService.ts  userService.ts  (+3 more)
(+283 files in other folders)
